RESOLVED FIXED130416
Share MemoryPressureHandler::releaseMemory() between platforms.
https://bugs.webkit.org/show_bug.cgi?id=130416
Summary Share MemoryPressureHandler::releaseMemory() between platforms.
Andreas Kling
Reported 2014-03-18 13:16:26 PDT
Share MemoryPressureHandler::releaseMemory() between platforms.
Attachments
Patch (5.24 KB, patch)
2014-03-18 13:17 PDT, Andreas Kling
no flags
Patch (5.15 KB, patch)
2014-03-18 13:25 PDT, Andreas Kling
no flags
Patch (6.08 KB, patch)
2014-03-18 13:36 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2014-03-18 13:17:20 PDT
WebKit Commit Bot
Comment 2 2014-03-18 13:19:25 PDT
Attachment 227094 [details] did not pass style-queue: ERROR: Source/WebCore/platform/MemoryPressureHandler.cpp:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/MemoryPressureHandler.cpp:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2014-03-18 13:25:44 PDT
Andreas Kling
Comment 4 2014-03-18 13:36:35 PDT
Antti Koivisto
Comment 5 2014-03-18 14:51:15 PDT
Comment on attachment 227099 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=227099&action=review > Source/WebCore/platform/MemoryPressureHandler.cpp:82 > + for (auto* document : Document::allDocuments()) pointer :O
WebKit Commit Bot
Comment 6 2014-03-18 19:33:55 PDT
Comment on attachment 227099 [details] Patch Clearing flags on attachment: 227099 Committed r165866: <http://trac.webkit.org/changeset/165866>
WebKit Commit Bot
Comment 7 2014-03-18 19:36:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.